Add container name

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,13 +2,14 @@ version: '3.8'
 services:
   kanchana-webapp:
     build: ./
+    container_name: kanchana-webapp
     networks:
       - kyoto
     ports:
       - "127.0.0.1:16080:3000"
     labels:
       - traefik.http.routers.kanchana-webapp.entrypoints=websecure
-      - traefik.http.routers.kanchana-webapp.service=api@internal
+      - traefik.http.routers.kanchana-webapp.service=kanchana-webapp
       - traefik.http.routers.kanchana-webapp.tls.certresolver=defaultCertResolver
       - traefik.http.routers.kanchana-webapp.tls.domains[0].main=kyoto.nishitvas.com
       - traefik.http.routers.kanchana-webapp.tls.domains[1].main=kyoto.nishitvas.dev
