--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@primer/octicons-react": "^17.2.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.1",
     "@types/node": "^16.11.35",
+    "@types/papaparse": "^5.3.2",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
+    "moment": "^2.29.3",
+    "papaparse": "^5.3.2",
     "react": "^18.1.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
@@ -39,5 +46,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@types/bootstrap": "^5.1.11"
+  },
+  "proxy": "http://localhost:4000"
 }
